# Issues-FS

./: README.md  pyproject.toml  requirements-test.txt
.github/workflows/: ci-pipeline.yml  ci-pipeline__main.yml
.issues/: _index.json  bugs-parser.issues  workstream-integration.issues  workstream-issues-file-parser.issues
.issues/config/: link-types.json  node-types.json
issues_fs/: __init__.py
issues_fs/issues/: Issue__Path__Config.py
issues_fs/issues/graph_services/: Comments__Service.py  Graph__Repository.py  Graph__Repository__Factory.py  Link__Service.py  Node__Service.py  Type__Service.py
issues_fs/issues/issues_file/: Factory__Issues_File__Nodes.py  Issues_File__Check__Service.py  Issues_File__Loader__Service.py  Issues_File__Normalise__Service.py  Parser__Issues_File.py  (+5 more)
issues_fs/mgraph/: MGraph__Issues__Domain.py  Schema__MGraph__Issue__Edge.py  Schema__MGraph__Issue__Node.py  Schema__MGraph__Issues.py  Schema__MGraph__Issues__Data.py
issues_fs/scripts/: migrate_node_to_issue_json.py
issues_fs/utils/: Version.py
tests/mgraph/: test_MGraph__Issues__Domain.py  test_Schema__MGraph__Issues.py
tests/utils/: test_Version.py
to_refactor-in/: Graph__Repository.py  Html_Transformation_Workbench__Fast_API.py  Issue__Children__Service.py  Node__Service.py  Root__Selection__Service.py  v0_2_34__brief-006a__gitgraph-issues__phase-2-backend__revised.md
to_refactor-in/mgraph/: MGraph__Issues__Domain.py  Schema__MGraph__Issues.py
to_refactor-in/routes/: Routes__Graph.py  Routes__Nodes.py
to_refactor-in/scripts/: migrate_node_to_issue_json.py
(+125 files in other folders)
