[tool.poetry]
name        = "issues_fs"
version     = "v0.41.0"
description = "Memory-FS"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/owasp-sbot/Issues-FS"
repository  = "https://github.com/owasp-sbot/Issues-FS"

[tool.poetry.dependencies]
python            = "^3.12"
osbot-utils       = "*"
memory_fs         = "*"

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"